--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Introduction to the DOM Lab</title>
+  <h1> my html adventure </h1>
 </head>
+<h1> my html adventure </h1>
 <body>
   <!--All our work for this lesson will go here-->
-  <h1> my html adventure <h1>
   <p>
   We're writing HTML markup to display in our <strong>browser</strong>.
   We're basically telling computers what to do. <em>Neat!</em>
